--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,9 +1,10 @@
 <h4>Select State</h4>
   <mat-form-field appearance="fill">
     <mat-label>State</mat-label>
-    <mat-select name="state">
+    <mat-select [(ngModel)]="selectedValue" name="state">
       <mat-option *ngFor="let state of states" [value]="state">
         {{state}}
       </mat-option>
     </mat-select>
   </mat-form-field>
+  <button mat-raised-button (click)="goToStatePage()" color="primary">Fetch Data</button>
